syntax = "proto3";

package commit;

import "google/protobuf/timestamp.proto";

// Enum for the type of change to a file in a commit
enum ChangeType {
  NONE = 0;
  ADD = 1;
  EDIT = 2;
  DELETE = 3;
  RENAME = 4;
  COPY = 5;
  MERGE = 6;
  LOCK = 7;
  UNDELETE = 8;
  ROLLBACK = 9;
  SOURCE_RENAME = 10;
  TARGET_RENAME = 11;
  PROPERTY_CHANGE = 12;
  ALL = 13;
}

// Enum for state of the status
enum GitStatusState {
  NOT_SET = 0;
  PENDING = 1;
  SUCCEEDED = 2;
  FAILED = 3;
  ERROR = 4;
  NOT_APPLICABLE = 5;
  PARTIALLY_SUCCEEDED = 6; // Added from previous definition
}




// Detailed information about file changes within a commit
message FileChange {
  string filename = 1;
  ChangeType change_type = 2;
  int32 additions = 3;
  int32 deletions = 4;
  string patch = 5;
  string previous_filename = 6;
  string content_type = 7;  // Add content type to handle different data formats.
}


// Information about the author or committer
message GitUser {
  optional string name = 1;
  optional string email = 2;
  google.protobuf.Timestamp date = 3;
  optional string login = 4;
  optional int64 id = 5;
  optional string node_id = 6;
  optional string avatar_url = 7;
  optional string url = 8;
  optional string html_url = 9;
  bool site_admin = 10;
}

// Main Commit message that includes references to other detailed messages
message Commit {
  string sha = 1;
  string url = 2;
  google.protobuf.Timestamp commit_date = 3;
  string message = 4;
  repeated FileChange file_changes = 5;
  repeated string parent_shas = 6;
  GitUser author = 7;
  GitUser committer = 8;
  repeated ResourceRef associated_work_items = 9;
  repeated GitPushRef push_refs = 10;
  repeated GitStatus statuses = 11;
  optional ChangeCountDictionary change_counts = 12; // Merged from old definition
}

// Repository metadata for additional links and resources
message RepositoryLinks {
  string html_url = 1;
  string commits_url = 2;
  string issues_url = 3;
  string pull_requests_url = 4;
}

// GitPushRef represents a reference to a Git push action
message GitPushRef {
  string date = 1;
  GitUser pushed_by = 2;
  int32 push_id = 3;
  string url = 4;
}

// GitStatus represents the current state and metadata about a commit's status
message GitStatus {
  GitStatusContext context = 1;
  GitUser created_by = 2;
  google.protobuf.Timestamp creation_date = 3;
  string description = 4;
  int32 id = 5;
  GitStatusState state = 6;
  string target_url = 7;
  google.protobuf.Timestamp updated_date = 8;
}

// Represents a change count dictionary (key-value pairs of changes)
message ChangeCountDictionary {
  map<string, int32> change_counts = 1;
}

// Enum to describe the type of a repository (mainly for Azure integration)
enum RepositoryType {
  GIT = 0;
  TFVC = 1;
}

// Represents resource ref used by azure
message ResourceRef {
  optional string id = 1;
  optional string url = 2;
  optional string name = 3;
  optional string type = 4;
}


// Update your proto definitions to include GitStatusContext
message GitStatusContext {
  string genre = 1;
  string name = 2;  // Name should be a non-nullable string in protobuf
}